[project]
name = "repo-agent"
version = "0.1.0"
description = "A2A server with Review/Critique pattern using LangGraph and Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repo_agent"]

